# uv-gitignore-wtf

./: README.md  pyproject.toml
