[project]
name = "uv-gitignore-wtf"
version = "0.1.0"
description = "Why does uv have issues setting the source path when .gitignore has /src in it?"
requires-python = "==3.12.3"

[tool.hatch.build.targets.wheel]
packages = ["src/wtf"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
